# Ex2

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/AI/: LLMService.h  LlamaCppService.cpp  LlamaCppService.h  LyricGenerator.h  RestLLMService.h
Source/Host/: HostNoteCapture.h
Source/Model/: DiffSingerModelManager.h  DiffSingerPipeline.h  OrtLoader.h  VocalNote.h  VocalRenderEngine.h
Source/Plugin/: PluginEditor.h  PluginMain.cpp  PluginProcessor.h  Theme.h
Source/Text/: G2PEngine.h
